--- a/WWWROOT/Web/caidan.html
+++ b/WWWROOT/Web/caidan.html
@@ -348,44 +348,118 @@
       </ul>
     </li>
     <!---------------------------------------------------- 2022 -------------------------------------------->
-    <li>
-      <input type="checkbox" name="mainMenu" id="item-5">
-      <label for="item-5">2022</label>
-      <ul>
-        <li><a href="#">技术支持</a></li>
-        <li><a href="#">培训服务</a></li>
-        <li><a href="#">下载中心</a></li>
-      </ul>
-    </li>
+  <li><input type="checkbox" name="mainMenu" id="item-5"><label for="item-5">2022</label>
+    <ul>
+      <li><a href="page.html?image=../../2022/20210104胸部CT.jpg" target="main">2022.01.04&nbsp;&nbsp;胸部CT</a></li>
+      <li><a href="page.html?image=../../2022/20220104脑部MR.jpg" target="main">2022.01.04&nbsp;&nbsp;脑部MR</a></li>
+      <li><a href="page.html?image=../../2022/20220105腹部彩超.jpg" target="main">2022.01.05&nbsp;&nbsp;腹部彩超</a></li>
+		 <li><a href="page.html?image=../../2022/20220119免疫细胞检查.jpg" target="main">2022.01.19&nbsp;&nbsp;免疫细胞</a></li>
+      <li><a href="page.html?image=../../2022/20220119血常规.jpg" target="main">2022.01.19&nbsp;&nbsp;血常规</a></li>
+      <li><a href="page.html?image=../../2022/20220119肿标.jpg" target="main">2022.01.19&nbsp;&nbsp;肿瘤指标</a></li>
+		      <li><a href="page.html?image=../../2022/20220208血常规.jpg" target="main">2022.02.08&nbsp;&nbsp;血常规</a></li>
+      <li><a href="page.html?image=../../2022/20220208肿标.jpg" target="main">2022.02.08&nbsp;&nbsp;肿瘤指标</a></li>
+		
+		<li><input type="checkbox" id="item-5-1"><label for="item-5-1">2022.02.10&nbsp;&nbsp;射波刀</label>
+          <ul>
+            <li><a href="page.html?image=../../2022/20220210射波刀靶区.jpg" target="main">2022.02.10&nbsp;&nbsp;射波刀靶区</a></li>
+            <li><a href="page.html?image=../../2022/20220215出院小结01.jpg&image=../../2022/20220215出院小结01.jpg" target="main">2022.02.15&nbsp;&nbsp;出院小结</a></li>
+          </ul></li>
+		
+      <li><a href="page.html?image=../../2022/20220302肿标.jpg" target="main">2022.03.02&nbsp;&nbsp;肿瘤指标</a></li>
+		 <li><a href="page.html?image=../../2022/20220316血常规.jpg" target="main">2022.03.16&nbsp;&nbsp;血常规</a></li>
+      <li><a href="page.html?image=../../2022/20220316肿标.jpg" target="main">2022.03.16&nbsp;&nbsp;肿瘤指标</a></li>
+      <li><a href="page.html?image=../../2022/20220404腹部彩超.jpg" target="main">2022.04.04&nbsp;&nbsp;腹部彩超</a></li>
+		 <li><a href="page.html?image=../../2022/20220404肿标.jpg" target="main">2022.04.04&nbsp;&nbsp;肿瘤指标</a></li>
+		 <li><a href="page.html?image=../../2022/20220425腹部彩超.jpg" target="main">2022.04.25&nbsp;&nbsp;腹部彩超</a></li>
+      <li><a href="page.html?image=../../2022/20220425胸部CT.jpg" target="main">2022.04.25&nbsp;&nbsp;胸部CT</a></li>
+      <li><a href="page.html?image=../../2022/20220516肿标.jpg" target="main">2022.05.16&nbsp;&nbsp;肿瘤指标</a></li>
+		 <li><a href="page.html?image=../../2022/20220616脑部MR.jpg" target="main">2022.06.16&nbsp;&nbsp;脑部MR</a></li>
+		 <li><a href="page.html?image=../../2022/20220707足侧光片.jpg" target="main">2022.07.07&nbsp;&nbsp;足侧光片</a></li>
+		<li><a href="page.html?image=../../2022/20220808肿瘤指标.jpg" target="main">2022.08.08&nbsp;&nbsp;肿瘤指标</a></li>
+		<li><a href="page.html?image=../../2022/20220808腹部彩超.jpg" target="main">2022.08.08&nbsp;&nbsp;腹部彩超</a></li>
+		<li><a href="page.html?image=../../2022/20220810胸部CT.jpg" target="main">2022.08.10&nbsp;&nbsp;胸部CT</a></li>
+		 <li><a href="page.html?image=../../2022/20220828脑部MR.jpg" target="main">2022.08.28&nbsp;&nbsp;脑部MR</a></li>
+      <li><a href="page.html?image=../../2022/20221007颈部彩超.jpg" target="main">2022.10.07&nbsp;&nbsp;颈部彩超</a></li>
+      <li><a href="page.html?image=../../2022/20221007脑部MR.jpg" target="main">2022.10.07&nbsp;&nbsp;脑部MR</a></li>
+		 <li><a href="page.html?image=../../2022/20221007锁骨上彩超.jpg" target="main">2022.10.07&nbsp;&nbsp;锁骨上彩超</a></li>
+		 <li><a href="page.html?image=../../2022/20221007心电图.jpg" target="main">2022.10.07&nbsp;&nbsp;心电图</a></li>
+      <li><a href="page.html?image=../../2022/20221007心脏彩超.jpg" target="main">2022.10.07&nbsp;&nbsp;心脏彩超</a></li>
+      <li><a href="page.html?image=../../2022/20221008腹部CT.jpg" target="main">2022.10.08&nbsp;&nbsp;腹部CT</a></li>
+		 <li><a href="page.html?image=../../2022/20221008肝肾.jpg" target="main">2022.10.08&nbsp;&nbsp;肝肾功能</a></li>
+		 <li><a href="page.html?image=../../2022/20221008血常规.jpg" target="main">2022.10.08&nbsp;&nbsp;血常规</a></li>
+      <li><a href="page.html?image=../../2022/20221008肿标.jpg" target="main">2022.10.08&nbsp;&nbsp;肿瘤指标</a></li>
+      <li><a href="page.html?image=../../2022/2022PETCT/20221102PETCT01.jpg&image=../../2022/2022PETCT/20221102PETCT02.jpg" target="main">2022.11.02&nbsp;&nbsp;PETCT</a></li>
+    </ul>
+  </li>
     <!---------------------------------------------------- 2023 -------------------------------------------->
-    <li>
-      <input type="checkbox" name="mainMenu" id="item-6">
-      <label for="item-6">2023</label>
-      <ul>
-        <li><a href="#">技术支持</a></li>
-        <li><a href="#">培训服务</a></li>
-        <li><a href="#">下载中心</a></li>
-      </ul>
-    </li>
-    <li>
-      <input type="checkbox" name="mainMenu" id="item-7">
-      <label for="item-7">2024</label>
-      <ul>
-        <li><a href="#">技术支持</a></li>
-        <li><a href="#">培训服务</a></li>
-        <li><a href="#">下载中心</a></li>
-      </ul>
-    </li>
-    <li><a href="#">2025</a></li>
-	      <li>
-      <input type="checkbox" name="mainMenu" id="item-9">
-      <label for="item-9">专项检查</label>
-      <ul>
-        <li><a href="#">PET-CT</a></li>
-        <li><a href="#">ECT</a></li>
-        <li><a href="#">基因检测</a></li>
-      </ul>
-    </li>
+      <li><input type="checkbox" name="mainMenu" id="item-6"><label for="item-6">2023</label>
+    <ul>
+      <li><a href="page.html?image=../../2023/20230115腹部彩超.jpg" target="main">2023.01.15&nbsp;&nbsp;腹部彩超</a></li>
+		<li><a href="page.html?image=../../2023/20230115肿瘤指标.jpg" target="main">2023.01.15&nbsp;&nbsp;肿瘤指标</a></li>
+		<li><a href="page.html?image=../../2023/20230216DNA倍体分析.jpg" target="main">2023.02.16&nbsp;&nbsp;DNA倍体分析</a></li>
+		<li><a href="page.html?image=../../2023/20230216HPV检验.jpg" target="main">2023.02.16&nbsp;&nbsp;HPV检验</a></li>
+		<li><a href="page.html?image=../../2023/20230311腹部彩超.jpg" target="main">2023.03.11&nbsp;&nbsp;腹部彩超</a></li>
+		<li><a href="page.html?image=../../2023/20230314头部MR.jpg" target="main">2023.03.14&nbsp;&nbsp;头部MR</a></li>
+		<li><a href="page.html?image=../../2023/20230314心电图.jpg" target="main">2023.03.14&nbsp;&nbsp;心电图</a></li>
+		<li><a href="page.html?image=../../2023/20230314胸部CT.jpg" target="main">2023.03.14&nbsp;&nbsp;胸部CT</a></li>
+      <li><a href="page.html?image=../../2023/20230621腹部彩超.jpg" target="main">2023.06.21&nbsp;&nbsp;腹部彩超</a></li>
+		<li><a href="page.html?image=../../2023/20230621肝肾功能.jpg" target="main">2023.06.21&nbsp;&nbsp;肝肾功能</a></li>
+		<li><a href="page.html?image=../../2023/20230621血常规.jpg" target="main">2023.06.21&nbsp;&nbsp;血常规</a></li>
+		<li><a href="page.html?image=../../2023/20230621肿瘤指标.jpg" target="main">2023.06.21&nbsp;&nbsp;肿瘤指标</a></li>
+		<li><a href="page.html?image=../../2023/20230624脑部MR.jpg" target="main">2023.06.24&nbsp;&nbsp;脑部MR</a></li>
+		<li><a href="page.html?image=../../2023/20230625胸部CT.jpg" target="main">2023.06.25&nbsp;&nbsp;胸部CT</a></li>
+		<li><a href="page.html?image=../../2023/20231122血常规.jpg" target="main">2023.11.22&nbsp;&nbsp;血常规</a></li>
+		<li><a href="page.html?image=../../2023/20231122肿标.jpg" target="main">2023.11.22&nbsp;&nbsp;肿瘤指标</a></li>
+    </ul>
+  </li>
+	<!---------------------------------------------------- 2024 -------------------------------------------->  
+      <li><input type="checkbox" name="mainMenu" id="item-7"><label for="item-7">2024</label>
+    <ul>
+      <li><a href="page.html?image=../../2018/20171028颈椎CT.jpg" target="main">2017.10.28&nbsp;&nbsp;颈椎CT</a></li>
+      <li><a href="page.html?image=../../2018/20180425腰椎MR.jpg" target="main">2018.04.25&nbsp;&nbsp;腰椎MR</a></li>
+      <li><a href="page.html?image=../../2018/20180702脑部MR.jpg" target="main">2018.07.02&nbsp;&nbsp;脑部MR</a></li>
+      <li><a href="page.html?image=../../2018/20181203PETCT01.jpg&image=../../2018/20181203PETCT02.jpg" target="main">2018.12.03&nbsp;&nbsp;PET-CT</a></li>
+
+      <li><input type="checkbox" id="item-7-1"><label for="item-7-1">2018.12.04&nbsp;&nbsp;住院检查</label>
+        <ul>
+          <li><a href="page.html?image=../../2018/20181204凝血.jpg" target="main">2018.12.04&nbsp;&nbsp;凝血</a></li>
+          <li><a href="page.html?image=../../2018/20181204生化01.jpg" target="main">2018.12.04&nbsp;&nbsp;生化01</a></li>
+          <li><a href="page.html?image=../../2018/20181204生化02.jpg" target="main">2018.12.04&nbsp;&nbsp;生化02</a></li>
+          <li><a href="page.html?image=../../2018/20181205肿瘤指标.jpg" target="main">2018.12.05&nbsp;&nbsp;肿瘤指标</a></li>
+          <li><a href="page.html?image=../../2018/20181205微生物01.jpg&image=../../2018/20181205微生物02.jpg&image=../../2018/20181205微生物03.jpg" target="main">2018.12.05&nbsp;&nbsp;微生物</a></li>
+          <li><a href="page.html?image=../../2018/20181205胸部CT.jpg" target="main">2018.12.05&nbsp;&nbsp;胸部CT</a></li>
+          <li><a href="page.html?image=../../2018/20181204住院病案首页01.jpg&image=../../2018/20181204住院病案首页02.jpg" target="main">2018.12.05&nbsp;&nbsp;病案首页</a></li>
+          <li><a href="page.html?image=../../2018/20181207出院小结01.jpg&image=../../2018/20181207出院小结02.jpg&image=../../2018/20181207出院小结03.jpg" target="main">2018.12.05&nbsp;&nbsp;出院小结</a></li>
+        </ul>
+      </li>
+ 
+    </ul>
+  </li>
+	  	<!---------------------------------------------------- 2025 --------------------------------------------> 
+      <li><input type="checkbox" name="mainMenu" id="item-8"><label for="item-8">2025</label>
+    <ul>
+      <li><a href="page.html?image=../../2018/20171028颈椎CT.jpg" target="main">2017.10.28&nbsp;&nbsp;颈椎CT</a></li>
+      <li><a href="page.html?image=../../2018/20180425腰椎MR.jpg" target="main">2018.04.25&nbsp;&nbsp;腰椎MR</a></li>
+      <li><a href="page.html?image=../../2018/20180702脑部MR.jpg" target="main">2018.07.02&nbsp;&nbsp;脑部MR</a></li>
+      <li><a href="page.html?image=../../2018/20181203PETCT01.jpg&image=../../2018/20181203PETCT02.jpg" target="main">2018.12.03&nbsp;&nbsp;PET-CT</a></li>
+
+      <li><input type="checkbox" id="item-8-1"><label for="item-8-1">2018.12.04&nbsp;&nbsp;住院检查</label>
+        <ul>
+          <li><a href="page.html?image=../../2018/20181204凝血.jpg" target="main">2018.12.04&nbsp;&nbsp;凝血</a></li>
+          <li><a href="page.html?image=../../2018/20181204生化01.jpg" target="main">2018.12.04&nbsp;&nbsp;生化01</a></li>
+          <li><a href="page.html?image=../../2018/20181204生化02.jpg" target="main">2018.12.04&nbsp;&nbsp;生化02</a></li>
+          <li><a href="page.html?image=../../2018/20181205肿瘤指标.jpg" target="main">2018.12.05&nbsp;&nbsp;肿瘤指标</a></li>
+          <li><a href="page.html?image=../../2018/20181205微生物01.jpg&image=../../2018/20181205微生物02.jpg&image=../../2018/20181205微生物03.jpg" target="main">2018.12.05&nbsp;&nbsp;微生物</a></li>
+          <li><a href="page.html?image=../../2018/20181205胸部CT.jpg" target="main">2018.12.05&nbsp;&nbsp;胸部CT</a></li>
+          <li><a href="page.html?image=../../2018/20181204住院病案首页01.jpg&image=../../2018/20181204住院病案首页02.jpg" target="main">2018.12.05&nbsp;&nbsp;病案首页</a></li>
+          <li><a href="page.html?image=../../2018/20181207出院小结01.jpg&image=../../2018/20181207出院小结02.jpg&image=../../2018/20181207出院小结03.jpg" target="main">2018.12.05&nbsp;&nbsp;出院小结</a></li>
+        </ul>
+      </li>
+ 
+    </ul>
+  </li>
+<!---------------------------------------------------- 202* --------------------------------------------> 
+<!---------------------------------------------------- END --------------------------------------------> 
   </ul>
 </nav>
 </body>
