--- a/WWWROOT/Web/caidan.html
+++ b/WWWROOT/Web/caidan.html
@@ -453,7 +453,7 @@
 		<li><a href="page.html?image=../../2024/20240603CT穿刺.jpg" target="main">2024.06.03&nbsp;&nbsp;CT穿刺</a></li>
 		<li><a href="page.html?image=../../2024/20240603遗传风险评估.jpg" target="main">2024.06.03&nbsp;&nbsp;遗传风险评估</a></li>
 		<li><a href="page.html?image=../../2024/20240603丙肝.jpg" target="main">2024.06.03&nbsp;&nbsp;丙肝</a></li>
-	   <li><a href="page.html?image=../../2024/20240603病原体DNA测定.jpg" target="main">2024.06.03&nbsp;&nbsp;病原体DNA测定</a></li>
+	   <li><a href="page.html?image=../../2024/20240603病原体DNA测定.jpg" target="main">2024.06.03&nbsp;&nbsp;病原体测定</a></li>
 		<li><a href="page.html?image=../../2024/20240603尿常规.jpg" target="main">2024.06.03&nbsp;&nbsp;尿常规</a></li>
 		<li><a href="page.html?image=../../2024/20240603粪常规.jpg" target="main">2024.06.03&nbsp;&nbsp;粪常规</a></li>
 		<li><a href="page.html?image=../../2024/20240604凝血.jpg" target="main">2024.06.04&nbsp;&nbsp;凝血</a></li>
