--- a/WWWROOT/Web/home.html
+++ b/WWWROOT/Web/home.html
@@ -20,7 +20,7 @@
   <!------------------------------------------------------- 右侧开始 ------------------------------------------------>
   <div class="right-panel">
     <main class="video">
-      <iframe name="main" src="page.html" style="width: 100%; height: 100%;"></iframe>
+      <iframe name="main" src="main.html" style="width: 100%; height: 100%;"></iframe>
     </main>
   </div>
   <!------------------------------------------------------- 右侧结束 ------------------------------------------------> 
