--- a/WWWROOT/Web/home.html
+++ b/WWWROOT/Web/home.html
@@ -26,7 +26,7 @@
         <!------------------------------------------------------- 右侧内容区 ------------------------------------------------>
         <div class="right-panel">
             <main class="video p-3">
-                <iframe name="main" src="main.html" class="shadow-sm"></iframe>
+                <iframe name="main" src="01.html" class="shadow-sm"></iframe>
             </main>
         </div>
     </div>
